# ArchitectureLogicielleR401

./: data.db
ArchitectureLogicielleR401-main/: data.db  pyproject.toml
ArchitectureLogicielleR401-main/archiLogicielleyb/: pyproject.toml
ArchitectureLogicielleR401-main/src/: data.db
ArchitectureLogicielleR401-main/src/archilog/: views.py
ArchitectureLogicielleR401-main/src/archilog/views/: __init__.py  api.py  cli.py  gui.py
ArchitectureLogicielleR401-main/src/archilog/views/templates/: home.html
archiLogicielleyb/src/: archilog.py  testdb
src/archilog/: config.py  data.env  models.py
src/archilog/views/: __init__.py  cli.py  gui.py
src/archilog/views/templates/: create.html  import.html  update.html
